[package]
name = "tvs-sketch-balls"
version = "0.1.0"
authors = ["Thomas Gorny <thomas.gorny@pm.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8.4"
approx = "0.5.1"
bytemuck = { version = "1.7.3", features = ["derive"] }
glam = { version = "0.20.2", features = ["bytemuck", "rand", "approx"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
